fix(ui): Fix language selectors width on Safari
Add explicit width: 100% to the host element to ensure proper rendering
on Safari browsers.

--- a/src/app/pages/translate/language-selectors/language-selectors.component.scss
+++ b/src/app/pages/translate/language-selectors/language-selectors.component.scss
@@ -1,5 +1,6 @@
 :host {
   display: flex;
+  width: 100%;
 
   &.spoken-to-signed {
     flex-direction: row-reverse;
